fix bugs in shifton project

--- a/2022/shifton/css/media.scss
+++ b/2022/shifton/css/media.scss
@@ -138,6 +138,16 @@
             line-height: 23px;
         }
     }
+    .lang {
+        margin-left: 0;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        &-drop {
+            position: static;
+            background-color: transparent;
+            padding-left: 0;
+        }
+    }
 }
 @media(max-width: 425px) {
     .promise-more-link {
